@@ -282,7 +282,6 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <excludeGroupIds>org.episteme</excludeGroupIds>
                         </configuration>
                     </execution>
                 </executions>
@@ -292,8 +291,14 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>org.episteme.benchmarks.ui.EpistemeBenchmarkingApp</mainClass>
+                    <mainClass>org.episteme.benchmarks.cli.BenchmarkCLI</mainClass>
                     <cleanupDaemonThreads>false</cleanupDaemonThreads>
+                    <arguments>
+                        <argument>--add-modules</argument>
+                        <argument>jdk.incubator.vector</argument>
+                        <argument>--enable-native-access=ALL-UNNAMED</argument>
+                        <argument>--enable-preview</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
